[package]
name = "sharptrace_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="sharptrace_check"
path="src/lib/mod.rs"

[[bin]]
name="sharptrace_checker"
path="src/main.rs"

[dependencies]
thiserror = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.5"
clap = { version = "3.0", features = ["derive"] }
nom = "7.1"

[profile.release]
debug = 1
